3.nginx_routing/1.loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ro
spec:
  replicas: 2 # 최대 개수
  selector:
    matchLabels:
      app: my-nginx # 일치 1 : 시작
  template:
    metadata:
      labels:
        app: my-nginx # 일치 2
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ro
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: my-nginx # 일치 3 : 완료
