3.nginx_routing/3.ingress_https.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  namespace: ro  # Service의 namespace 설정
spec:
  # ingress를 적용하기 위해 ClusterIP로 변경
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: my-nginx
---
# 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: ro  # Ingress의 namespace 설정
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 첫번째 prefix제거후 endpoint 전달
    
spec:
  rules:
    - host: server.araboka.store
      http: 
        paths:
          - path: /product-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port: 
                  number: 80
          - path: /order-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port: 
                  number: 80
---
# 위에 있는 ingress 복붙
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: ro  # Ingress의 namespace 설정
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 첫번째 prefix제거후 endpoint 전달
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  tls:
  - hosts:
    - "server.araboka.store"
    secretName: jungeun-com-tls
  rules:
    - host: server.araboka.store
      http: 
        paths:
          - path: /product-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port: 
                  number: 80  
          - path: /order-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port: 
                  number: 80
